# intro_to_ros

./: .gitignore  README.md  README_Melodic.md  ROS_README.md
bv80bot/bv80bot_node/: package.xml
bv80bot/bv80bot_node/config/: .gitignore  rviz.rviz
bv80bot/bv80bot_node/launch/: bv80bot.launch  bv80bot_base_map.launch  bv80bot_base_nav.launch  bv80bot_base_only.launch  bv80bot_gui_only.launch  bv80bot_map_gui.launch  bv80bot_nav_gui.launch  mr_bv80bot_nav_gui.launch  xbox360_teleop.launch
bv80bot/bv80bot_node/launch/include/: bv80bot_base.launch  bv80bot_base_cam.launch  bv80bot_gui.launch  bv80bot_map.launch  bv80bot_nav.launch  keyboard_teleop.launch  logitech_teleop.launch  ps3_teleop.launch  velocity_smoother.launch  xbox360_teleop.launch
bv80bot/bv80bot_node/param/: mux.yaml
bv80bot/bv80bot_node/param/defaults/: smoother.yaml
bv80bot/bv80bot_node/scripts/: 2015-08-16-23-03-21.bag  BumperToLaser.py  test_odom.sh
bv80bot/neato_robot/: README.md
bv80bot/neato_robot/neato_2dnav/: package.xml
bv80bot/neato_robot/neato_2dnav/launch/: amcl.launch  move_base.launch
bv80bot/neato_robot/neato_2dnav/maps/: 2000lbFull.yaml  2000lbFullCrop.pgm  2000lbFullCrop.yaml  home-map.pgm  home-map.yaml
bv80bot/neato_robot/neato_2dnav/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
bv80bot/neato_robot/neato_2dnav/params/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
bv80bot/neato_robot/neato_driver/: package.xml
bv80bot/neato_robot/neato_driver/src/neato_driver/: neato_driver.py  neato_driver.py_bk
bv80bot/neato_robot/neato_node/: CMakeLists.txt  neato.rviz  package.xml
bv80bot/neato_robot/neato_node/launch/: bringup-all.launch  bringup.launch
bv80bot/neato_robot/neato_node/meshes/: neato.dae  neato.skp
bv80bot/neato_robot/neato_node/nodes/: neato.py
bv80bot/neato_robot/neato_node/urdf/: neato.urdf.xacro
bv80bot/neato_robot/neato_robot/: package.xml
documents/: Roll Your Own Turtlebot Part II.odt  SV ROS Class 2.odp  SV ROS Class1 ROS.odp  Simulation Notes  readme.txt
neato/: CMakeLists.txt  package.xml  setup.py
neato/config/: neato.rviz  rviz.rviz
neato/launch/: base_map.launch  base_nav.launch  base_only.launch  bringup.launch  gui_only.launch  map_gui.launch  nav_gui.launch
neato/launch/include/: base.launch  base_cam.launch  gui.launch  keyboard_teleop.launch  logitech_teleop.launch  nav.launch  velocity_smoother.launch
neato/meshes/: neato.skp
neato/msg/: BumperEvent.msg  ButtonEvent.msg  Sensors.msg
neato/param/: mux.yaml
neato/param/defaults/: smoother.yaml
neato/scripts/: get_neato_help.py  neato_help.txt
neato/src/: driver.py  neato.py
neato/urdf/: neato.urdf.xacro
neato_2dnav/: .gitignore  package.xml
neato_2dnav/launch/: amcl.launch  move_base.launch
neato_2dnav/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml
neato_driver/: CMakeLists.txt  package.xml
neato_driver/launch/: bringup.launch
neato_driver/meshes/: neato.dae
neato_driver/scripts/: get_neato_help.py
neato_driver/src/: neato_driver.py
neato_nav/: .gitignore  CMakeLists.txt  package.xml
neato_nav/launch/: move_base.launch
neato_nav/maps/: .keep
neato_nav/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
neato_node/: CMakeLists.txt  package.xml
neato_node/launch/: bringup.launch
neato_node/src/: neato.py
neato_robot/: CMakeLists.txt  package.xml
neato_robot/config/: rviz.rviz
neato_robot/launch/: base_map.launch  base_nav.launch  base_only.launch  gui_only.launch  map_gui.launch  nav_gui.launch
neato_robot/launch/include/: base.launch  base_cam.launch  gui.launch  keyboard_teleop.launch  logitech_teleop.launch  map.launch  nav.launch  ps3_teleop.launch  velocity_smoother.launch  xbox360_teleop.launch
neato_robot/scripts/: BumperToLaser.py  bumper.py
sample_code/beginner_tutorials/: CMakeLists.txt  package.xml
sample_code/beginner_tutorials/msg/: distance.msg
sample_code/beginner_tutorials/scripts/: AdcToDistance.py  AdcToDistance_Client.py  Sonar_Node.py  bumper.py
sample_code/beginner_tutorials/srv/: AdcToDistance.srv  AnalogToDistance.srv
sample_code/svros_single_sonar/: svros_single_sonar.ino
scripts/: get_neato_help.py  neato_help.md  power_off_neato.py  stop_neato.py
srl_robot_description/: CMakeLists.txt  package.xml
srl_robot_description/meshes/: Magni_Base_Tray.dae  Magni_Left_Drive_Wheel.dae  Magni_Right_Caster.dae  Magni_Right_Drive_Wheel.dae  hc-sr04-ultrasonic-sensor.dae
srl_robot_description/urdf/: blastoise.sdf  blastoise.urdf  gazebo_ready_blastoise.urdf
srl_robot_gazebo/: CMakeLists.txt  package.xml
srl_robot_gazebo/launch/: srl_robot.launch
srl_robot_gazebo/worlds/: srl_robot.world
