<package>
    <name>neato_driver</name>
    <version>0.2.0</version>
    <description>
    This is a generic driver for the Neato's robotic vacuums.
    NOTE: This has been heavily modified from the one documented at https://wiki.ros.org/neato_driver 
    
  </description>
    <author>Michael Ferguson</author>
    <maintainer email="ferguson@cs.albany.edu">Michael Ferguson</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>

    <!-- from neato_driver-->
    <run_depend>python-serial</run_depend>
    <!-- from neato_node-->
    <run_depend>message_runtime</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>tf</run_depend>

    <export>
        <rosdoc config="rosdoc.yaml" />
    </export>
</package>
