<?xml version="1.0"?>
<package>
    <name>neato_robot</name>
    <version>0.0.0</version>
    <description>The neato_robot (formerly bv80bot_node) package provides the drivers and configuration for using a Neato Vaccum Robot as a ROS Robot.</description>

    <maintainer email="brannon.vann@gmail.com">Brannon Vann</maintainer>

    <license>BSD</license>

    <run_depend>yocs_cmd_vel_mux</run_depend>
    <run_depend>xacro</run_depend>
    <run_depend>yocs_velocity_smoother</run_depend>
    <run_depend>teleop_twist_joy</run_depend>
    <run_depend>teleop_twist_keyboard</run_depend>
    <run_depend>joy</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>move_base</run_depend>
    <run_depend>map_server</run_depend>
    <run_depend>amcl</run_depend>
    <run_depend>gmapping</run_depend>
    <run_depend>dwa_local_planner</run_depend>

    <buildtool_depend>catkin</buildtool_depend>

</package>
