<package>
  <name>neato_robot</name>
  <version>0.2.0</version>
  <description>
    Metapackage for drivers for the Neato XV-11 robot. 
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="ferguson@cs.albany.edu">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/neato_robot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>neato_driver</run_depend>
  <run_depend>neato_node</run_depend>
  <run_depend>neato_2dnav</run_depend>
  
  <run_depend>xacro</run_depend>
  <!-- run_depend>turtlebot-description</run_depend>
  <run_depend>turtlebot-navigation</run_depend>
  <run_depend>turtlebot-teleop</run_depend -->
  <run_depend>yocs_cmd_vel_mux</run_depend>
  <run_depend>yocs_velocity_smoother</run_depend>

  <export>
   <metapackage/>
  </export>
</package>
